<resources>
    <string name="app_name">UCN</string>
    <string name="main_usn_logo">main usn logo</string>
    <string name="university_social_network">University Social Network</string>
    <string name="sign_in">Sign In</string>
    <string name="upload_profile">upload profile</string>
    <string name="upload_cover">upload cover</string>
    <string name="upload_cover_picture">Upload cover picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="emaill_address_or_mobile_number">Emaill address or mobile number</string>
    <string name="new_password">New password</string>
    <string name="get_started">get started</string>
    <string name="log_in">log in</string>
    <string name="password">Password</string>
    <string name="facebook_connect">facebook connect</string>
    <string name="connect_with_people_in_your_university">Connect with people in your University</string>
    <string name="or">or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="by_creating_new_account_i_accept_the">By creating new account, I accept the</string>
    <string name="create_new_account">create new account</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="by_signing_up_you_agree_our">By Signing up you agree our</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
